1.1.2: skip unique (block)items
(cherry picked from commit ff3ecf4a3a8d3f236c9918794820ad782fc049ca)